--- a/app/style.css
+++ b/app/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;1,400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 * {
   padding: 0;
   margin: 0;
@@ -8,14 +8,49 @@
   display: grid;
   gap: 10px;
   margin-top: 10rem;
+  margin: 50vh 20vw;
 }
 
 li {
   margin: 2px;
-  font-family: "Ubuntu", sans-serif;
-  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+  font-family: "Roboto", sans-serif;
+  opacity: 1;
+  box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+  transform: translate(2px, 2px);
+  animation-name: messageIn;
+  animation-duration: 0.3s;
+  border-radius: 5px;
+  list-style: none;
 }
-
+@keyframes messageIn {
+  0% {
+    transform: translate(0);
+    opacity: 0.1;
+  }
+  40% {
+    transform: translate(5px, 5px);
+    opacity: 0.4;
+  }
+  60% {
+    transform: translate(4px, 4px);
+    opacity: 0.8;
+  }
+  80% {
+    transform: translate(1px, 1px);
+    opacity: 1;
+  }
+}
 .message_box {
+  font-family: "Roboto", sans-serif;
+  border-radius: 2px;
   outline: 0;
+  border: 1px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
+    rgba(0, 0, 0, 0.2) 0px 18px 36px -18px inset;
+}
+.message_box:focus {
+  border-radius: 5px;
+  box-shadow: rgba(208, 208, 227, 0.25) 0px 30px 60px -12px inset,
+    rgba(0, 0, 0, 0.199) 0px 18px 36px -18px inset;
+  transition: ease-in 0.07s;
 }
