--- a/app/style.css
+++ b/app/style.css
@@ -4,7 +4,10 @@
   padding: 0;
   margin: 0;
 }
-
+body {
+  -webkit-font-smoothing: antialiased;
+  background-image: url("https://images.pexels.com/photos/2088170/pexels-photo-2088170.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
+}
 .modal {
   display: grid;
   gap: 10px;
@@ -25,7 +28,7 @@ li {
   animation-duration: 0.3s;
   border-radius: 5px;
   list-style: none;
-  transition: transform 0.4s ease-out;
+  transition: transform 0.3s ease;
 }
 li:hover {
   transform: translate(-4px, -4px);
