--- a/app/style.css
+++ b/app/style.css
@@ -5,14 +5,30 @@
   margin: 0;
 }
 body {
+  position: fixed;
   -webkit-font-smoothing: antialiased;
-  background-image: url("https://images.pexels.com/photos/2088170/pexels-photo-2088170.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
+
+  background-color: #ffffff;
+  opacity: 1;
+  background-image: radial-gradient(
+      #3fa796 0.6000000000000001px,
+      transparent 0.6000000000000001px
+    ),
+    radial-gradient(#3fa796 0.6000000000000001px, #ffffff 0.6000000000000001px);
+  background-size: 24px 24px;
+  background-position: 0 0, 12px 12px;
+  overflow: hidden;
 }
 .modal {
   display: grid;
   gap: 10px;
   margin-top: 10rem;
-  margin: 50vh 20vw;
+  margin: 19vh 20vw;
+}
+ul {
+  height: 40vh;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 li {
@@ -101,4 +117,23 @@ p {
   box-shadow: #2a094465 5px 5px, #2a094427 10px 10px, #2a09441e 15px 15px,
     #2a09440f 20px 20px;
   transform: translate(-1px, -1px);
+}
+
+.shift {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  transition: all 02s ease-in-out;
+}
+
+.head {
+  margin: 50px auto;
+  font-family: "Major Mono Display", monospace;
+}
+a {
+  color: #2a0944;
+  transition: color 0.3s ease;
+}
+a:hover {
+  color: #3fa796;
 }
