--- a/app/style.css
+++ b/app/style.css
@@ -29,6 +29,7 @@ ul {
   height: 40vh;
   overflow-y: auto;
   overflow-x: hidden;
+  scrollbar-gutter: auto;
 }
 
 li {
@@ -136,4 +137,17 @@ a {
 }
 a:hover {
   color: #3fa796;
+}
+
+*::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+*::-webkit-scrollbar-track {
+  background-color: rgba(0, 0, 0, 0);
+  border-radius: 10px;
+}
+*::-webkit-scrollbar-thumb {
+  background-color: #dfdfdf;
+  border-radius: 10px;
 }
